--- a/src/App.css
+++ b/src/App.css
@@ -1,21 +1,23 @@
-/************ Custom Font ************/
+/************ General Css ************/
+
 @font-face {
-	font-family: Centra;
-	src: url('./assets/font/CentraNo2-Bold.ttf');
-	font-weight: 700;
-}
-@font-face {
-	font-family: Centra;
-	src: url('./assets/font/CentraNo2-Medium.ttf');
-	font-weight: 500;
-}
-@font-face {
-	font-family: Centra;
-	src: url('./assets/font/CentraNo2-Book.ttf');
-	font-weight: 400;
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Bold.ttf');
+  font-weight: 700;
 }
 
-/************ Default Css ************/
+@font-face {
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Medium.ttf');
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: Centra;
+  src: url('./assets/font/CentraNo2-Book.ttf');
+  font-weight: 400;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -63,6 +65,10 @@ button {
   background-color: transparent;
 }
 
+input:focus, textarea:focus, select:focus {
+  outline: none;
+}
+
 .home p,
 .about .about-me-text p {
   color: #B8B8B8;
@@ -79,7 +85,7 @@ button {
   border: 1px solid #fff;
   padding: 10px 20px;
   font-size: 18px;
-  margin-left: 18px;
+  margin-left: 12px;
   position: relative;
   background-color: transparent;
   transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
@@ -99,26 +105,46 @@ button {
 }
 
 .btn-global:hover {
-  color: #121212; /* Text color on hover */
+  color: #121212;
 }
 
 .btn-global:hover::before {
-  width: 100%; /* Background expands fully on hover */
+  width: 100%;
   z-index: -1;
 }
 
-input:focus, textarea:focus, select:focus {
-  outline: none;
+/* Responsive Adjustments */
+@media (max-width: 768px) {
+  .btn-global {
+    padding: 6px 12px;
+    font-size: 14px;
+    margin-left: 8px;
+  }
+}
+
+@media (max-width: 480px) {
+  .btn-global {
+    padding: 5px 10px;
+    font-size: 12px;
+    margin-left: 6px;
+  }
 }
 
 .main-logo {
-  background-color: rgba(0, 0, 0, 0.1); /* Adjust the last number (0.7) to change transparency */
-  padding: 3px; /* Optional: Add padding if needed */
-  border-radius: 20px; /* Optional: Add some rounding if desired */
-  width: 200%;
-  max-width: 220px;
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 3px;
+  border-radius: 20px;
   height: auto;
   filter: invert(1);
+}
+
+.navbar .main-logo {
+  max-width: 250px;
+  width: 180%;
+}
+
+.footer .main-logo {
+  max-width: 280px;
 }
 
 .App {
@@ -126,51 +152,39 @@ input:focus, textarea:focus, select:focus {
   background-position: top center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-attachment: fixed; /* Optional: Keeps the background fixed while scrolling */
-}
-
-/* Apply the Background to the Parent Container */
-.home-about-wrapper {
-  background-image: url('./assets/img/banner-bg.png');
-  background-position: top center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; /* Optional: Keeps the background fixed while scrolling */
+  background-attachment: fixed;
   position: relative;
   z-index: 0;
 }
 
 @media (min-width:1700px) {
-	main .container {
-		max-width: 100%;
-		padding: 0 150px;
-	}
+  main .container {
+    max-width: 100%;
+    padding: 0 150px;
+  }
 }
 
-/* p.success {
-	color: green;
-}
-
-p.danger {
-	color: red;
-} */
 
 /************ Navbar Css ************/
+
 nav.navbar {
   padding: 18px 0;
   position: fixed;
   width: 100%;
   top: 0;
   z-index: 9999;
-  transition:  0.32s ease-in-out;
+  transition: 0.32s ease-in-out;
 }
+
 nav.navbar.scrolled {
   padding: 0px 0;
   background-color: #121212;
 }
+
 nav.navbar a.navbar-brand {
-    width: 9%;
+  width: 9%;
 }
+
 nav.navbar .navbar-nav .nav-link.navbar-link {
   font-weight: 400;
   color: #fff !important;
@@ -179,56 +193,66 @@ nav.navbar .navbar-nav .nav-link.navbar-link {
   font-size: 18px;
   opacity: 0.75;
 }
+
 nav.navbar .navbar-nav a.nav-link.navbar-link:hover,
 nav.navbar .navbar-nav a.nav-link.navbar-link.active {
-    opacity: 1;
+  opacity: 1;
 }
+
 span.navbar-text {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
+
 .social-icon {
-    display: inline-block;
-    margin-left: 14px;
+  display: inline-block;
+  margin-left: 14px;
 }
+
 .social-icon a {
-    width: 42px;
-    height: 42px;
-    background: rgba(217, 217, 217, 0.1);
-    display: inline-flex;
-    border-radius: 50%;
-    margin-right: 6px;
-    align-items: center;
-    justify-content: center;
-    line-height: 1;
-    border: 1px solid rgba(255, 255, 255, 0.5);
+  width: 42px;
+  height: 42px;
+  background: rgba(217, 217, 217, 0.1);
+  display: inline-flex;
+  border-radius: 50%;
+  margin-right: 6px;
+  align-items: center;
+  justify-content: center;
+  line-height: 1;
+  border: 1px solid rgba(255, 255, 255, 0.5);
 }
+
 .social-icon a::before {
-    content: "";
-    width: 42px;
-    height: 42px;
-    position: absolute;
-    background-color: #ffffff;
-    border-radius: 50%;
-    transform: scale(0);
-	transition: 0.3s ease-in-out;
+  content: "";
+  width: 42px;
+  height: 42px;
+  position: absolute;
+  background-color: #ffffff;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.3s ease-in-out;
 }
+
 .social-icon a:hover::before {
-    transform: scale(1);
+  transform: scale(1);
 }
+
 .social-icon a img {
-	width: 40%;
-	z-index: 1;
-	transition: 0.3s ease-in-out;
+  width: 40%;
+  z-index: 1;
+  transition: 0.3s ease-in-out;
 }
+
 .social-icon a:hover img {
-	filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
+  filter: brightness(0) saturate(100%) invert(0%) sepia(7%) saturate(98%) hue-rotate(346deg) brightness(95%) contrast(86%);
 }
+
 nav.navbar .navbar-toggler:active,
 nav.navbar .navbar-toggler:focus {
-	outline: none;
-    box-shadow: none;
+  outline: none;
+  box-shadow: none;
 }
+
 nav.navbar .navbar-toggler-icon {
   width: 24px;
   height: 17px;
@@ -238,44 +262,52 @@ nav.navbar .navbar-toggler-icon {
   transition: all 300ms linear;
   top: -2px;
 }
+
 nav.navbar .navbar-toggler-icon:focus {
-	border-bottom: 2px solid #fff;
+  border-bottom: 2px solid #fff;
 }
+
 nav.navbar .navbar-toggler-icon:after,
 nav.navbar .navbar-toggler-icon:before {
-	width: 24px;
-	position: absolute;
-	height: 2px;
-	background-color: #fff;
-	top: 0;
-	left: 0;
-	content: '';
-	z-index: 2;
-	transition: all 300ms linear;
+  width: 24px;
+  position: absolute;
+  height: 2px;
+  background-color: #fff;
+  top: 0;
+  left: 0;
+  content: '';
+  z-index: 2;
+  transition: all 300ms linear;
 }
+
 nav.navbar .navbar-toggler-icon:after {
-	top: 8px;
+  top: 8px;
 }
+
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:after {
-	transform: rotate(45deg);
-	background-color: #fff;
-	height: 2px;
+  transform: rotate(45deg);
+  background-color: #fff;
+  height: 2px;
 }
+
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon:before {
-	transform: translateY(8px) rotate(-45deg);
-	background-color: #fff;
-	height: 2px;
+  transform: translateY(8px) rotate(-45deg);
+  background-color: #fff;
+  height: 2px;
 }
+
 nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
-	border-color: transparent;
+  border-color: transparent;
 }
 
 
 /************ Home Css ************/
+
 .home {
   margin-top: 0;
   padding: 260px 0 100px 0;
 }
+
 .home .tagline {
   font-weight: 700;
   letter-spacing: 0.8px;
@@ -286,6 +318,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-bottom: 16px;
   display: inline-block;
 }
+
 .home h1 {
   font-size: 65px;
   font-weight: 700;
@@ -294,6 +327,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   margin-bottom: 20px;
   display: block;
 }
+
 .home button {
   color: #fff;
   font-weight: 700;
@@ -303,99 +337,132 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   display: flex;
   align-items: center;
 }
+
 .home button svg {
   font-size: 25px;
   margin-left: 10px;
   transition: 0.3s ease-in-out;
   line-height: 1;
 }
+
 .home button:hover svg {
   margin-left: 25px;
 }
+
 .home img {
   animation: updown 3s linear infinite;
 }
+
 @keyframes updown {
-    0% {
-        transform: translateY(-20px);
-    }
-    50% {
-        transform: translateY(20px);
-    }
-    100% {
-        transform: translateY(-20px);
-    }
+  0% {
+    transform: translateY(-20px);
+  }
+  
+  50% {
+    transform: translateY(20px);
+  }
+  
+  100% {
+    transform: translateY(-20px);
+  }
 }
+
 .txt-rotate > .wrap {
   border-right: 0.08em solid #666;
 }
 
+
 /************ About Css ************/
+
 .about {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  padding: 0 10rem;
+  flex-direction: column;
+  height: auto;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+
+@media (min-width: 768px) {
+  .about {
+    flex-direction: row;
+    height: 100vh;
+    padding: 0 5rem;
+  }
 }
 
 .about .section__pic-container {
-  flex: 1; /* Image container takes up equal space */
+  flex: 1;
   display: flex;
-  justify-content: center; /* Centers the image horizontally in its container */
+  justify-content: center;
+  margin-bottom: 2rem;
+}
+
+@media (min-width: 768px) {
+  .about .section__pic-container {
+    margin-bottom: 0;
+  }
 }
 
 .about .section__pic-container img {
-  border-radius: 50%; /* Ensures the image is circular */
-  max-width: 100%; /* Ensures the image scales properly */
-  height: 400px;
-  width: 400px;
-  margin: auto 0;
+  border-radius: 50%;
+  width: 300px;
+  height: 300px;
+}
+
+@media (min-width: 768px) {
+  .about .section__pic-container img {
+    width: 400px;
+    height: 400px;
+  }
 }
 
 .about .section__content-container {
-  flex: none; /* Content container takes up equal space */
-  display: 1;
+  flex: 1;
+  display: flex;
   flex-direction: column;
-  justify-content: center; /* Vertically centers the content */
-  text-align: center; /* Centers text within the container */
-  padding-left: 2rem; /* Adds space between the image and the text */
-}
-
-.about .about-content-wrapper {
-  padding: 1rem 1.5rem !important;
-  border: 1px solid #fff;
-  border-radius: 50px 50px;
+  justify-content: center;
   text-align: center;
-  display: inline-block;
-  max-width: 600px;
-  margin-bottom: 1rem;
+  padding: 1rem;
 }
 
 .about .about-content-wrapper {
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding: 1rem;
+  border: 1px solid #fff;
+  border-radius: 50px;
+  max-width: 100%;
+  margin: 0 auto 2rem auto;
+  box-sizing: border-box;
+}
+
+@media (min-width: 768px) {
+  .about .about-content-wrapper {
+    padding: 2rem;
+    max-width: 600px;
+  }
 }
 
 .about .section__text {
-  margin-bottom: 1.5rem; /* Adds space between text and buttons */
+  margin-bottom: 1.5rem;
 }
 
 .about .section__text .title {
-  font-size: 3rem;
-  margin-bottom: 0.5rem;
+  font-size: 2rem;
 }
 
-.about .section__text__p1,
-.about .section__text__p2 {
-  margin: 0;
+@media (min-width: 768px) {
+  .about .section__text .title {
+    font-size: 3rem;
+  }
 }
 
 .about .btn-container {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 1rem;
-  margin-bottom: 1.5rem; /* Adds space between buttons and social icons */
+  margin-bottom: 1.5rem;
 }
 
 .about #socials-container {
@@ -404,7 +471,6 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   gap: 1rem;
 }
 
-/* ICONS */
 .about .icon {
   cursor: pointer;
   height: 2rem;
@@ -416,50 +482,22 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 }
 
 .about .about-me-text {
+  max-width: 100%;
+  padding: 0 1rem;
   text-align: center;
-  max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+  margin-bottom: 2rem;
 }
 
-/* BUTTONS
-.about .btn {
-  font-weight: 600;
-  transition: all 300ms ease;
-  padding: 1rem;
-  width: 8rem;
-  border-radius: 2rem;
+@media (min-width: 768px) {
+  .about .about-me-text {
+    max-width: 700px;
+    margin: 0 auto;
+  }
 }
 
-.about .btn-color-1,
-.about .btn-color-2 {
-  border: rgb(53, 53, 53) 0.1rem solid;
-}
-
-.about .btn-color-1:hover,
-.about .btn-color-2:hover {
-  cursor: pointer;
-}
-
-.about .btn-color-1,
-.about .btn-color-2:hover {
-  background: rgb(53, 53, 53);
-  color: white;
-}
-
-.about .btn-color-1:hover {
-  background: rgb(0, 0, 0);
-}
-
-.about .btn-color-2 {
-  background: none;
-}
-
-.about .btn-color-2:hover {
-  border: rgb(255, 255, 255) 0.1rem solid;
-} */
 
 /************ Skills Css ************/
+
 #skills {
   position: relative;
   text-align: center;
@@ -493,7 +531,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
   background-color: #222;
   padding: 1rem;
   border-radius: 20px;
-  width: 45%; /* Each container takes almost half the width */
+  width: 45%;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -506,16 +544,15 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
 .line {
   width: 100%;
-  height: 1px; /* Thickness of the line */
-  background-color: #fff; /* Color of the line */
-  margin: 0 0 1rem 0; /* Adds space above and below the line */
-  border-radius: 2px; /* Rounds the edges of the line */
+  height: 1px;
+  background-color: #fff;
+  margin: 0 0 1rem 0;
+  border-radius: 2px;
 }
-
 
 .article-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr)); /* Responsive columns */
+  grid-template-columns: repeat(auto-fit, minmax(175px, 1fr));
   gap: 1rem;
 }
 
@@ -540,31 +577,40 @@ article h3 {
 article p {
   text-align: left;
   font-size: 0.9rem;
-  font-weight: 1;
+}
+
+.icon-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.skill-icon {
+  width: 50px; 
+  height: 50px;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+.text-container {
+  margin-bottom: 0.5rem;
+  width: 100px;
 }
 
 
 /************ Projects Css ************/
+
 .project {
   padding: 80px 0;
-  /* position: relative; */
-  /* background-color: black; */
 }
+
 .project h2 {
   margin: 50px 0 50px 0;
-	font-size: 45px;
-	font-weight: 700;
+  font-size: 45px;
+  font-weight: 700;
   text-align: center;
 }
-/* .project p {
-  color: #B8B8B8;
-  font-size: 18px;
-  letter-spacing: 0.8px;
-  line-height: 1.5em;
-  margin: 14px auto 30px auto;
-  text-align: center;
-  width: 56%;
-} */
+
 .project .nav.nav-pills {
   width: 72%;
   margin: 0 auto;
@@ -572,9 +618,11 @@ article p {
   background-color: rgb(255 255 255 / 10%);
   overflow: hidden;
 }
+
 .project .nav.nav-pills .nav-item {
   width: 33.33333%;
 }
+
 .project .nav.nav-pills .nav-link {
   background-color: transparent;
   border-radius: 0;
@@ -589,51 +637,58 @@ article p {
   text-align: center;
   z-index: 0;
 }
+
 .project .nav.nav-pills .nav-link::before {
-    content: "";
-    position: absolute;
-    width: 0;
-    height: 100%;
-    background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
-    top: 0;
-    left: 0;
-    z-index: -1;
-    transition: 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 100%;
+  background: linear-gradient(90.21deg, #AA367C -5.91%, #4A2FBD 111.58%);
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: 0.3s ease-in-out;
 }
+
 .project .nav.nav-pills .nav-link.active::before {
-    width: 100% !important;
+  width: 100% !important;
 }
+
 .project .nav.nav-pills .nav-link.active {
-    border: 1px solid rgba(255, 255, 255, 1);
+  border: 1px solid rgba(255, 255, 255, 1);
 }
+
 .nav-link#projects-tabs-tab-first {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 55px 0px 0px 55px;
 }
+
 .nav-link#projects-tabs-tab-second {
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
+
 .nav-link#projects-tabs-tab-third {
   border: 1px solid rgba(255, 255, 255, 0.5);
   border-radius: 0 55px 55px 0;
 }
+
 .proj-imgbx {
   position: relative;
   border-radius: 30px;
   overflow: hidden;
   margin-bottom: 24px;
-  width: 100%; /* Adjust this as necessary */
-  max-width: 400px; /* Fixed width for the project cards */
-  height: 300px; /* Fixed height for the project cards */
+  width: 100%;
+  max-width: 400px;
+  height: 300px;
 }
 
 .proj-imgbx img {
   width: 100%;
   height: 100%;
-  object-fit: contain; /* Ensures the image covers the entire area without stretching */
-  border-radius: 30px; /* Matches the container's border radius */
-  background-color: #fff; /* Optional: adds a background color for any empty space */
+  object-fit: contain;
+  border-radius: 30px;
+  background-color: #fff;
 }
 
 .proj-imgbx::before {
@@ -667,12 +722,14 @@ article p {
   top: 50%;
   opacity: 1;
 }
+
 .proj-txtx h4 {
   font-size: 30px;
   font-weight: 700;
   letter-spacing: 0.8px;
   line-height: 1.1em;
 }
+
 .proj-txtx span {
   font-style: italic;
   font-weight: 400;
@@ -680,6 +737,7 @@ article p {
   letter-spacing: 0.8px;
   display: block;
 }
+
 .background-image-right {
   top: 20%;
   position: absolute;
@@ -707,12 +765,14 @@ article p {
 
 
 /************ Contact Css ************/
+
 #contact {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  height: 40vh;
+  height: auto;
+  padding: 2rem 1rem;
 }
 
 .section__text__p1 {
@@ -722,13 +782,17 @@ article p {
 
 .contact-info-upper-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   border-radius: 2rem;
   border: rgb(53, 53, 53) 0.1rem solid;
   border-color: rgb(163, 163, 163);
   background: rgb(250, 250, 250);
-  margin: 2rem auto;
+  margin: 3rem auto;
   padding: 0.5rem;
+  width: 100%;
+  max-width: 500px;
 }
 
 .contact-info-container {
@@ -736,12 +800,13 @@ article p {
   align-items: center;
   justify-content: center;
   gap: 0.5rem;
-  margin: 1rem;
+  margin: 0.5rem 0;
+  text-align: center;
 }
 
 .contact-info-container p {
-  font-size: larger;
-  margin: 0;  /* Remove any default margin to better align with icons */
+  font-size: 1rem;
+  margin: 0 1rem 0 0;
 }
 
 .contact-icon {
@@ -750,16 +815,24 @@ article p {
 
 .email-icon, .linkedin-icon {
   height: 2.5rem;
-  width: 2.5rem;  /* Ensure the icon is square */
-  border-radius: 50%;  /* Make the icon circular */
+  width: 2.5rem;
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+/* Responsive adjustments */
+@media (min-width: 768px) {
+  .contact-info-upper-container {
+    flex-direction: row;
+    padding: 0.5rem 1rem;
+  }
+}
 
 
 /************ Footer Css ************/
+
 .footer {
   padding: 0 0 20px 0;
   background-image: url('./assets/img/footer-bg.png');
@@ -767,6 +840,7 @@ article p {
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .footer p {
   font-weight: 400;
   font-size: 14px;
@@ -774,8 +848,7 @@ article p {
   letter-spacing: 0.5px;
   margin-top: 20px;
 }
+
 .footer a {
   margin-top: 15px;
 }
-
-
