--- a/src/App.css
+++ b/src/App.css
@@ -484,14 +484,18 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .about .about-me-text {
   max-width: 100%;
   padding: 0 1rem;
+  text-align: left;
+  margin-bottom: 1rem;
+}
+
+.about .about-me-text h1 {
   text-align: center;
-  margin-bottom: 2rem;
 }
 
 @media (min-width: 768px) {
   .about .about-me-text {
     max-width: 700px;
-    margin: 0 auto;
+    margin: 0;
   }
 }
 
@@ -618,7 +622,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 
   .skill-icon {
     width: 40px; 
-    height: 40px; /* Adjust icon size for smaller screens */
+    height: 40px;
   }
 }
 
@@ -858,6 +862,9 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 /************ Footer Css ************/
 
 .footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 0 0 20px 0;
   background-image: url('./assets/img/footer-bg.png');
   background-position: center center;
